# treescaffold

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: jarvis.tree
src/treescaffold/: __init__.py  cli.py  core.py
tests/: test_basic.py
